revisited coupon-create

--- a/src/app/features/reserved-area/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/coupon-list/coupon-list.component.html
@@ -1,10 +1,8 @@
-<h1 xmlns:visibility="http://www.w3.org/1999/xhtml" xmlns:visibility="http://www.w3.org/1999/xhtml"
-    xmlns:visibility="http://www.w3.org/1999/xhtml" xmlns:visibility="http://www.w3.org/1999/xhtml">Coupon List</h1>
+<h1 class="text-center">Coupon List</h1>
 
 <body>
 <div class="reglist">
   <table class="table table-striped">
-
     <tr>
       <th width="5%">id</th>
       <th width="50%">Title</th>
