--- a/src/app/features/reserved-area/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/coupon-create/coupon-create.component.html
@@ -4,29 +4,30 @@
       <div class="card mx-4">
         <div class="card-body p-4">
           <h1 class="text-center">Create</h1>
-          <p class="text-muted text-center">Create Coupon</p>
+          <h4 class="text-muted text-center">Create Coupon</h4>
 
           <form [formGroup]="couponForm" (ngSubmit)="saveCoupon()">
-
-            <input type="text" formControlName="title" class="form-control" placeholder="Title"/>
-            <textarea type="text" formControlName="description" class="form-control" placeholder="Description"></textarea>
-
-            <input type="number" formControlName="price" class="form-control" placeholder="Price"/>
-
-            <input type="date" formControlName="valid_from" class="form-control" placeholder="Validity from.."/>
-
-            <input type="date" formControlName="valid_until" class="form-control" placeholder="Validity until.."/>
-
-            <input type="number" formControlName="state" class="form-control" placeholder="State"/>
-            <input type="text" formControlName="constraints" class="form-control" placeholder="Constraints"/>
-            <input type="number" formControlName="owner" class="form-control" placeholder="Owner"/>
-
-
-            <input type="number" formControlName="consumer" class="form-control" placeholder="Consumer"/>
-
-
+            <label class="text-muted text-center container">Title:</label>
+            <input type="text" formControlName="title" class="form-control" />
+            <label class="text-muted text-center container">Description:</label>
+            <textarea type="text" formControlName="description" class="form-control" ></textarea>
+            <label class="text-muted text-center container">Price:</label>
+            <input type="number" formControlName="price" class="form-control" />
+            <label class="text-muted text-center container">Validity from:</label>
+            <input type="date" onfocus="(this.type='date')" formControlName="valid_from" class="form-control" />
+            <label class="text-muted text-center container">Validity until:</label>
+            <input type="date" onfocus="(this.type='date')" formControlName="valid_until" class="form-control" />
+            <label class="text-muted text-center container">State:</label>
+            <input type="number" formControlName="state" class="form-control" />
+            <label class="text-muted text-center container">Constraints:</label>
+            <input type="text" formControlName="constraints" class="form-control" />
+            <label class="text-muted text-center container">Owner:</label>
+            <input type="number" formControlName="owner" class="form-control" />
+            <label class="text-muted text-center container">Consumer:</label>
+            <input type="number" formControlName="consumer" class="form-control" />
+            <p>
             <button  class="btn btn-block btn-success">Create Coupon</button>
-
+            </p>
           </form>
 
         </div>
