--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,7 +9,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
 
-    <div *ngIf="!logged$ && username$ == null">
+    <div *ngIf="!isUserLoggedIn">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/authentication/login']">Login</a>
@@ -20,7 +20,7 @@
       </ul>
     </div>
 
-    <div *ngIf="logged$ || username$ != null" class="ml-auto">
+    <div *ngIf="isUserLoggedIn" class="ml-auto">
       <ul class="nav navbar-nav">
         <li class="nav-item dropdown">
           <a class="nav-link nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
@@ -30,7 +30,7 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right">
             <div class="dropdown-header text-center">
-              <strong class="text-capitalize">{{username$}} Settings</strong>
+              <strong class="text-capitalize">Settings</strong>
             </div>
             <a class="dropdown-item" href="#">
               <i class="fa fa-user"></i> Profile</a>
