--- a/src/app/features/reserved-area/coupon-create/coupon-create.component.scss
+++ b/src/app/features/reserved-area/coupon-create/coupon-create.component.scss
@@ -6,3 +6,19 @@ label{
 p{
   padding-top: 30px !important;
 }
+
+input::-webkit-inner-spin-button, input::-webkit-outer-spin-button{
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+div.form-inline{
+
+}
+
+div.wrapperDate {
+  text-align: center;
+}
+div.divDateTime {
+  display: inline-block;
+}
