--- a/src/app/features/reserved-area/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/coupon-list/coupon-list.component.html
@@ -4,21 +4,21 @@
 <div class="reglist">
   <table class="table table-striped">
     <tr>
-      <th width="5%">id</th>
-      <th width="50%">Title</th>
-      <th width="5%">Timestamp</th>
-      <th width="5%">Price</th>
-      <th width="5%">Valid From</th>
-      <th width="5%">Valid Until</th>
-      <th width="5%">State</th>
-      <th width="5%">Constraints</th>
-      <th width="5%">Consumer</th>
-      <th width="5%" minlength="5%">
+      <td width="5%">id</td>
+      <td width="50%">Title</td>
+      <td width="5%">Timestamp</td>
+      <td width="5%">Price</td>
+      <td width="5%">Valid From</td>
+      <td width="5%">Valid Until</td>
+      <td width="5%">State</td>
+      <td width="5%">Constraints</td>
+      <td width="5%">Consumer</td>
+      <td width="5%" minlength="5%">
         <button style="visibility: hidden"  type="button" class="btn btn-info" (click)="onEdit(i)">Edit</button>
-      </th>
-      <th width="5%" minlength="5%">
+      </td>
+      <td width="5%" minlength="5%">
         <button style="visibility: hidden" type="button" class="btn btn-danger" (click)="onDelete(i)">Delete</button>
-      </th>
+      </td>
     </tr>
   </table>
 </div>
