--- a/src/app/features/reserved-area/edit-coupon/edit-coupon.component.html
+++ b/src/app/features/reserved-area/edit-coupon/edit-coupon.component.html
@@ -1,1 +1,1 @@
-<app-feature-reserved-area-coupon-create></app-feature-reserved-area-coupon-create>
+<app-feature-reserved-area-coupon-create #couponPass ></app-feature-reserved-area-coupon-create>
