--- a/src/app/features/reserved-area/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/coupon-create/coupon-create.component.html
@@ -16,7 +16,7 @@
                   <input  type="text" formControlName="title" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f.title.errors }"/>
                       <div *ngIf="submitted && f.title.errors" class="invalid-feedback" >
-                        <div *ngIf="f.title.errors">Title is required, Maximum 40 character</div>
+                        <div *ngIf="f.title.errors">Title is required, Minimum 5 characters, Maximum 40 character</div>
                       </div>
               </div>
             </div>
