--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -16,13 +16,13 @@
     </a>
     <!-- Submenu content -->
     <div id="submenu1" class="collapse sidebar-submenu">
-      <a href="/reserved-area/list" class="list-group-item list-group-item-action text-white">
+      <a [routerLink]="['/reserved-area/list']" class="list-group-item list-group-item-action text-white">
         <span class="menu-collapsed">Coupon List</span>
       </a>
-      <a href="/reserved-area/create" class="list-group-item list-group-item-action text-white">
+      <a [routerLink]="['/reserved-area/create']" class="list-group-item list-group-item-action text-white">
         <span class="menu-collapsed">Create Coupon</span>
       </a>
-      <a href="#" class="list-group-item list-group-item-action text-white">
+      <a class="list-group-item list-group-item-action text-secondary">
         <span class="menu-collapsed">Other to Add</span>
       </a>
     </div>
@@ -36,27 +36,27 @@
     </a>
     <!-- Submenu content -->
     <div id="submenu2" class="collapse sidebar-submenu">
-      <a href="#" class="list-group-item list-group-item-action text-white">
+      <a class="list-group-item list-group-item-action text-secondary">
         <span class="menu-collapsed">Settings</span>
       </a>
-      <a href="#" class="list-group-item list-group-item-action text-white">
+      <a class="list-group-item list-group-item-action text-secondary">
         <span class="menu-collapsed">Password</span>
       </a>
     </div>
     <!-- Separator without title -->
     <li class="list-group-item sidebar-separator menu-collapsed"></li>
     <!-- /END Separator -->
-    <a href="#" class="list-group-item list-group-item-action">
+    <a class="list-group-item list-group-item-action">
       <div class="d-flex w-100 justify-content-start align-items-center">
         <span class="fa fa-question fa-fw mr-3"></span>
-        <span class="menu-collapsed">Help</span>
+        <span class="menu-collapsed text-secondary">Help</span>
       </div>
     </a>
-    <a href="#" data-toggle="sidebar-colapse"
+    <a data-toggle="sidebar-colapse"
        class="list-group-item list-group-item-action d-flex align-items-center">
       <div class="d-flex w-100 justify-content-start align-items-center">
         <span id="collapse-icon" class="fa fa-2x mr-3"></span>
-        <span id="collapse-text" class="menu-collapsed">Collapse</span>
+        <span id="collapse-text" class="menu-collapsed text-secondary">Collapse</span>
       </div>
     </a>
   </ul>
