edit e delete coupons

--- a/src/app/features/reserved-area/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/coupon-list/coupon-list.component.html
@@ -31,7 +31,7 @@
           <button type="button" class="btn btn-info" (click)="onEdit(coupon)">Edit</button>
         </td>
         <td scope="col">
-          <button type="button" class="btn btn-danger" (click)="onDelete()">Delete</button>
+          <button type="button" class="btn btn-danger" (click)="onDelete(coupon.valueOf().id)">Delete</button>
         </td>
       </tr>
 
