--- a/src/app/features/reserved-area/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/coupon-create/coupon-create.component.html
@@ -71,6 +71,12 @@
                 </div>
               </div>
             </div>
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label">Select image:</label>
+              <div class="col-sm-10">
+                <input type="file" formControlName="image" class="form-control"/>
+              </div>
+            </div>
             <div class="alert alert-danger col-md-12"
                  *ngIf="submitted && f.valid_from.errors?.MatchDate">time passed!!!
             </div>
