--- a/src/app/features/reserved-area/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/coupon-create/coupon-create.component.html
@@ -1,4 +1,3 @@
-
 <div class="container">
   <div class="row">
     <div class="col-md-8 offset-md-2 mt-1">
@@ -9,77 +8,176 @@
 
           <form [formGroup]="couponForm" (ngSubmit)="saveCoupon()">
             <div class="form-group row">
-              <label  class="col-sm-2 col-form-label">Title</label>
-                <div class="col-sm-10">
-                  <!--<input value="{{couponPass.title}}" type="text" formControlName="title" class="form-control"-->
+              <label class="col-sm-3 col-form-label">Title</label>
+              <div class="col-sm-9">
+                <!--<input value="{{couponPass.title}}" type="text" formControlName="title" class="form-control"-->
 
-                  <input  type="text" formControlName="title" class="form-control"
-                    [ngClass]="{ 'is-invalid': submitted && f.title.errors }"/>
-                      <div *ngIf="submitted && f.title.errors" class="invalid-feedback" >
-                        <div *ngIf="f.title.errors">Title is required, Minimum 5 characters, Maximum 40 character</div>
-                      </div>
+                <input type="text" formControlName="title" class="form-control"
+                       [ngClass]="{ 'is-invalid': submitted && f.title.errors }"/>
+                <div *ngIf="submitted && f.title.errors" class="invalid-feedback">
+                  <div *ngIf="f.title.errors">Title is required, Minimum 5 characters, Maximum 40 character</div>
+                </div>
               </div>
             </div>
             <div class="form-group row">
-            <label  class="col-sm-2 col-form-label">Description:</label>
-              <div class="col-sm-10">
+              <label class="col-sm-3 col-form-label">Description</label>
+              <div class="col-sm-9">
                 <textarea type="text" formControlName="description" class="form-control"
-                      [ngClass]="{ 'is-invalid': submitted && f.description.errors }"></textarea>
-                    <div *ngIf="submitted && f.description.errors" class="invalid-feedback" >
-                        <div *ngIf="f.description.errors">Description is required, Maximum 200 character</div>
-                    </div>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Price:</label>
-              <div class="col-sm-10">
-                <input type="number" formControlName="price" class="form-control"
-                   [ngClass]="{ 'is-invalid': submitted && f.price.errors }"/>
-                    <div *ngIf="submitted && f.price.errors" class="invalid-feedback" >
-                      <div *ngIf="f.price.errors">Value required</div>
-                  </div>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Validity from:</label>
-              <div class="col-sm-10">
-                  <input  min="{{toDay}}"  type="datetime-local"  formControlName="valid_from" class="form-control"
-                          [ngClass]="{ 'is-invalid': submitted && f.valid_from.errors }"/>
-                  <div *ngIf="submitted && f.valid_from.errors " class="invalid-feedback" >
-                      <div *ngIf=" f.valid_from.errors ">Date or time is incorrect</div>
-                  </div>
+                          [ngClass]="{ 'is-invalid': submitted && f.description.errors }"></textarea>
+                <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
+                  <div *ngIf="f.description.errors">Description is required, Maximum 200 character</div>
+                </div>
               </div>
             </div>
 
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Validity until:</label>
-              <div class="col-sm-10">
-                  <input type="datetime-local"  formControlName="valid_until" class="form-control"
-                         [ngClass]="{ 'is-invalid': submitted && f.valid_until.errors }"/>
-                <div *ngIf="submitted && f.valid_until.errors" class="invalid-feedback" >
+              <label class="col-sm-3 col-form-label">Image</label>
+              <div class="col-sm-9">
+                <!--<input type="file" formControlName="image" class="form-control" (change)="onFileChanged($event)"-->
+                <!--[ngClass]="{ 'is-invalid': submitted && f.image.errors }"/>-->
+                <!---->
+
+                <!--<angular-file-uploader [config]="afuConfig"></angular-file-uploader>-->
+
+                <input type="file" class="col-sm-6 p-0" ng2FileSelect [uploader]="uploader"/>
+
+                <div *ngFor="let item of uploader.queue" class="col-sm-6 p-0 mr-0 float-right">
+                  <button type="button" class="btn btn-success btn-xs ml-1"
+                          (click)="item.upload()" [disabled]="item.isReady || item.isUploading || item.isSuccess">
+                    <span class="glyphicon glyphicon-upload"></span> Upload
+                  </button>
+                  <button type="button" class="btn btn-warning btn-xs ml-1"
+                          (click)="item.cancel()" [disabled]="!item.isUploading">
+                    <span class="glyphicon glyphicon-ban-circle"></span> Cancel
+                  </button>
+                  <button type="button" class="btn btn-danger btn-xs ml-1"
+                          (click)="item.remove()">
+                    <span class="glyphicon glyphicon-trash"></span> Remove
+                  </button>
+                </div>
+
+                <div class="mt-2">
+                  Progress:
+                  <div class="progress" style="">
+                    <div class="progress-bar" role="progressbar"
+                         [ngStyle]="{ 'width': uploader.progress + '%' }">
+                    </div>
+                  </div>
+                </div>
+
+<!--                <div class="col-sm-12" style="top: 10px">
+
+                  <table class="table">
+                    <thead>
+                    <tr>
+                      <th width="50%">Name</th>
+                      <th>Status</th>
+                      <th>Actions</th>
+                      &lt;!&ndash;<th>Status</th>&ndash;&gt;
+                      &lt;!&ndash;<th>Actions</th>&ndash;&gt;
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let item of uploader.queue">
+                      <td><strong>{{ item?.file?.name }}</strong></td>
+                      <td *ngIf="uploader.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
+                      <td *ngIf="uploader.isHTML5">
+                        <div class="progress" style="margin-bottom: 0;">
+                          <div class="progress-bar" role="progressbar"
+                               [ngStyle]="{ 'width': item.progress + '%' }"></div>
+                        </div>
+                      </td>
+                      <td class="text-center">
+                        <span *ngIf="item.isSuccess"><i class="fas fa-check-circle"></i></span>
+                        <span *ngIf="item.isCancel"><i class="fas fa-ban"></i></span>
+                        <span *ngIf="item.isError"><i class="fas fa-trash-alt"></i></span>
+                      </td>
+                      <td nowrap>
+                        <button type="button" class="btn btn-success btn-xs"
+                                (click)="item.upload()" [disabled]="item.isReady || item.isUploading || item.isSuccess">
+                          <span class="glyphicon glyphicon-upload"></span> Upload
+                        </button>
+                        <button type="button" class="btn btn-warning btn-xs"
+                                (click)="item.cancel()" [disabled]="!item.isUploading">
+                          <span class="glyphicon glyphicon-ban-circle"></span> Cancel
+                        </button>
+                        <button type="button" class="btn btn-danger btn-xs"
+                                (click)="item.remove()">
+                          <span class="glyphicon glyphicon-trash"></span> Remove
+                        </button>
+                      </td>
+                    </tr>
+                    </tbody>
+                  </table>
+
+                  <div>
+                    <div>
+                      Progress:
+                      <div class="progress" style="">
+                        <div class="progress-bar" role="progressbar"
+                             [ngStyle]="{ 'width': uploader.progress + '%' }"></div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>-->
+
+                <div *ngIf="submitted && f.image.errors" class="invalid-feedback">
+                  <div *ngIf="f.image.errors">Image is required</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-sm-3 col-form-label">Price</label>
+              <div class="col-sm-9">
+                <input type="number" formControlName="price" class="form-control"
+                       [ngClass]="{ 'is-invalid': submitted && f.price.errors }"/>
+                <div *ngIf="submitted && f.price.errors" class="invalid-feedback">
+                  <div *ngIf="f.price.errors">Value required</div>
+                </div>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-3 col-form-label">Valid from</label>
+              <div class="col-sm-9">
+                <input min="{{toDay}}" type="datetime-local" formControlName="valid_from" class="form-control"
+                       [ngClass]="{ 'is-invalid': submitted && f.valid_from.errors }"/>
+                <div *ngIf="submitted && f.valid_from.errors " class="invalid-feedback">
+                  <div *ngIf=" f.valid_from.errors ">Date or time is incorrect</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-sm-3 col-form-label">Valid until</label>
+              <div class="col-sm-9">
+                <input type="datetime-local" formControlName="valid_until" class="form-control"
+                       [ngClass]="{ 'is-invalid': submitted && f.valid_until.errors }"/>
+                <div *ngIf="submitted && f.valid_until.errors" class="invalid-feedback">
                   <div *ngIf="f.valid_until.errors">Date or time is incorrect</div>
                 </div>
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Constraints:</label>
-              <div class="col-sm-10">
+              <label class="col-sm-3 col-form-label">Constraints</label>
+              <div class="col-sm-9">
                 <input type="text" formControlName="constraints" class="form-control"
-                   [ngClass]="{ 'is-invalid': submitted && f.constraints.errors }"/>
-                <div *ngIf="submitted && f.constraints.errors" class="invalid-feedback" >
+                       [ngClass]="{ 'is-invalid': submitted && f.constraints.errors }"/>
+                <div *ngIf="submitted && f.constraints.errors" class="invalid-feedback">
                   <div *ngIf="f.constraints.errors">Value required</div>
                 </div>
               </div>
             </div>
             <div class="alert alert-danger col-md-12"
-                 *ngIf="submitted && f.valid_from.errors?.MatchDate">time passed!!!
+                 *ngIf="submitted && f.valid_from.errors?.MatchDate">Either Valid From or Valid Until contains a data already passed.
             </div>
             <div class="alert alert-danger col-md-12"
-                 *ngIf="submitted && f.valid_until.errors?.MatchDateFromUntil">Data Until lower to Data From
+                 *ngIf="submitted && f.valid_until.errors?.MatchDateFromUntil">Data Until must be greater than Data From
             </div>
             <div class="form group">
               <p>
-                <button  class="btn btn-block btn-success">Create Coupon</button>
+                <button class="btn btn-block btn-success">Create Coupon</button>
               </p>
             </div>
 
@@ -88,7 +186,6 @@
         </div>
 
       </div>
-
 
 
     </div>
