--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -38,18 +38,19 @@
                        [ngClass]="{ 'is-invalid': submitted && f.image.errors }"/>
 
                 <div *ngFor="let item of uploader.queue" class="col-sm-6 p-0 mr-0 float-right">
-                  <button type="button" class="btn btn-success btn-xs ml-1"
+                  <div><button type="button" class="btn btn-success btn-xs ml-1"
                           (click)="item.upload()" [disabled]="item.isReady || item.isUploading || item.isSuccess">
-                    <span class="glyphicon glyphicon-upload"></span> Upload
-                  </button>
-                  <button type="button" class="btn btn-warning btn-xs ml-1"
+                        <span class="glyphicon glyphicon-upload"></span> Upload
+                      </button>
+                      <button type="button" class="btn btn-warning btn-xs ml-1"
                           (click)="item.cancel()" [disabled]="!item.isUploading">
-                    <span class="glyphicon glyphicon-ban-circle"></span> Cancel
-                  </button>
-                  <button type="button" class="btn btn-danger btn-xs ml-1"
+                        <span class="glyphicon glyphicon-ban-circle"></span> Cancel
+                      </button>
+                      <button type="button" class="btn btn-danger btn-xs ml-1"
                           (click)="item.remove()">
-                    <span class="glyphicon glyphicon-trash"></span> Remove
-                  </button>
+                        <span class="glyphicon glyphicon-trash"></span> Remove
+                      </button>
+                  </div>
                 </div>
 
                 <div class="mt-2">
@@ -109,12 +110,18 @@
                 </div>
               </div>
             </div>
+
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Select image:</label>
-              <div class="col-sm-10">
-                <input type="file" formControlName="image" class="form-control"/>
+              <label class="col-sm-3 col-form-label">Quantity</label>
+              <div class="col-sm-9">
+                <input type="number" formControlName="quantity" class="form-control"
+                       [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }"/>
+                <div *ngIf="submitted && f.quantity.errors" class="invalid-feedback">
+                  <div *ngIf="f.quantity.errors">Value required or incorrect</div>
+                </div>
               </div>
             </div>
+
             <div class="alert alert-danger col-md-12"
                  *ngIf="submitted && f.valid_from.errors?.MatchDate">Either Valid From or Valid Until contains a data already passed.
             </div>
@@ -123,6 +130,9 @@
             </div>
             <div class="alert alert-danger col-md-12" *ngIf="submitted && f.image.errors?.NoPath">
               Please upload an image before create the coupon.
+            </div>
+            <div class="alert alert-danger col-md-12"
+                 *ngIf="submitted && f.valid_until.errors?.MatchQuantity">Quantity incorrect.
             </div>
             <div class="form group">
               <p>
