Coupon showcase done, added method to service

--- a/src/app/features/feature.component.html
+++ b/src/app/features/feature.component.html
@@ -6,7 +6,7 @@
 
   <div class="col px-0" id="main-content">
     <app-core-breadcrumb></app-core-breadcrumb>
-    <div class="container-fluid" style="padding-left:35px; padding-top:10px">
+    <div class="container-fluid" style="padding: 9px 28px">
       <router-outlet></router-outlet>
     </div>
 
